2006-12-20  Jean-Christophe Baillie  <baillie@gostai.com>

	urbivalid-up. 

2006-12-20  Jean-Christophe Baillie  <baillie@gostai.com>

	fix small bug in speed:0 modified assignment. 
	* src/ucommand.cc: fix behavior. No more 0=0.0001 ugly stuff.

2006-12-20  Jean-Christophe Baillie  <baillie@gostai.com>

        Fix ticket [111].
	fix synchronous assignment problem with add mode. 
	* src/ucommand.cc: use previous value as startvalue to insure that it
        will remain unchanged between several assignments during the same
        cycle.

2006-12-20  Jean-Christophe Baillie  <baillie@gostai.com>

	formatting change 
	* src/ucommand.cc: done.

2006-12-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Use libport/cstdio.
	* src/ucommand.cc,
	* src/uconnection.cc,
	* src/uexpression.cc,
	* src/uobj.cc,
	* src/uobject.cc,
	* src/userver.cc,
	* src/usystem.cc,
	* src/uvariable.cc,
	* src/uvariablename.cc: Here.

2006-12-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix include.
	* src/uvalue.hh: Fix typo.

2006-12-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Add missing include.
	* src/uvalue.hh: include ref-pt.hh from libport.

2006-12-20  Akim Demaille  <akim.demaille@free.fr>

	Include cstdarg
	* src/uconnection.cc: here.

2006-12-19  Akim Demaille  <akim.demaille@free.fr>

	UConnection::sendf
	* src/uconnection.hh, src/uconnection.cc (UConnection::sendf): New.
	* src/ucommand.cc, src/userver.cc, src/uvariablename.cc:
	perl -0 -pi -e 's/char (\w+)\[([^\]]+)\];
	\s*snprintf\s*\(\1,\s*\2,\s* (.*?)\);
	(\s*connection->send)\(\1,\s*(.*?)\);/$4f ($5, $3);/gms' src/*c
	Plus fixes by hand when it matched too well.

2006-12-19  Akim Demaille  <akim.demaille@free.fr>

	Simplifications
	* src/userver.cc: Use C++ like ctors.
	Someone will have to clean the warnings.
	And maybe continue to improve this ctor.
	Also, use simple iterator variable names (e.g., i).

2006-12-19  Akim Demaille  <akim.demaille@free.fr>

	Use an impossible name for removeFunction