@@ -1,3 +1,10 @@
+2006-12-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
+
+	Fix CLEANFILES.
+	* Makefile.am,
+	* src/Makefile.am (CLEANFILES): Add vc80.pdb (VC++ puts the equivalent
+          of the debug stuff generated by -g in this file).
+
 2006-12-20  Jean-Christophe Baillie  <baillie@gostai.com>
 
 	urbivalid-up. 
